Trivial refactoring: use `Files.readString`